@@ -1,3 +1,9 @@
+2006-04-07  Rodney Dawes  <dobey@novell.com>
+
+	* */stock/text/Makefile.am:
+	* */stock/text/stock_text*: Removed some text formatting icons that
+	have been superceded by formatting icons in the actions context
+
 2006-04-07  Jakub Steiner <jimmac@ximian.com>
 
 	* */devices/video-display.*: contributed by Luca Ferretti
